# rududu-image-codec

./: README.md
src/: Makefile.am
src/lib/: Makefile.am  band.cpp  bandcodec.cpp  bitcodec.cpp  dct2d.h  huffcodec.h  image.h  imagebuffer.cpp  obmc.cpp
src/ric/: Makefile.am  ric.cpp
src/utils/: Makefile.am  huffgen.cpp
tags/ric_0.1/: rududu.kdevelop
tags/ric_0.1/lib/: band.h  bandcodec.cpp  bandcodec.h  bitcodec.cpp  bitcodec.h  geomcodec.cpp  geomcodec.h  huffcodec.cpp  image.cpp  image.h  imagebuffer.cpp  imagebuffer.h  muxcodec.cpp  muxcodec.h  obmc.cpp  obmc.h  obme.cpp  obme.h  rududucodec.h  utils.h  wavelet2d.cpp
tags/ric_0.1/ric/: ric.cpp
tags/ric_0.1/utils/: Makefile.am
tags/ric_0.2.1/: Makefile.cvs  configure.in  rududu.kdevelop
tags/ric_0.2.1/lib/: Makefile.am  utils.h  wavelet2d.h
tags/ric_0.2.1/ric/: Makefile.am  ric.cpp
tags/ric_0.2.1/utils/: testmotion.cpp
tags/ric_0.2.2/lib/: bandcodec.h  dct2d.cpp  geomcodec.cpp  geomcodec.h  huffcodec.cpp  obmc.h  obme.cpp  obme.h  wavelet2d.cpp
tags/ric_0.2.2/ric/: ric.cpp
tags/ric_0.2.2/utils/: sgi2rgb.cpp
tags/ric_0.2/lib/: bandcodec.cpp  bindct.h  bitcodec.h  image.cpp  imagebuffer.h  muxcodec.cpp  muxcodec.h  rududucodec.cpp  rududucodec.h
tags/ric_0.2/ric/: ric.cpp
