INCLUDES = 
METASOURCES = AUTO
pkglib_LTLIBRARIES = librududu.la
librududu_la_SOURCES = band.cpp bandcodec.cpp bitcodec.cpp dct2d.cpp \
	geomcodec.cpp huffcodec.cpp image.cpp imagebuffer.cpp muxcodec.cpp obmc.cpp obme.cpp \
	rududucodec.cpp wavelet2d.cpp
librududu_la_LDFLAGS = -version-info 2:2:2 -no-undefined
include_HEADERS = bandcodec.h bindct.h dct2d.h geomcodec.h huffcodec.h image.h \
	imagebuffer.h obmc.h obme.h rududucodec.h
