INCLUDES = 
METASOURCES = AUTO
lib_LIBRARIES = librududu.a
librududu_a_SOURCES = band.cpp bandcodec.cpp bitcodec.cpp dct2d.cpp \
	geomcodec.cpp huffcodec.cpp image.cpp imagebuffer.cpp muxcodec.cpp obmc.cpp obme.cpp \
	rududucodec.cpp wavelet2d.cpp
noinst_HEADERS = bandcodec.h bindct.h dct2d.h geomcodec.h huffcodec.h image.h \
	imagebuffer.h obmc.h obme.h rududucodec.h
